// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobStreet navigation component should render message with URL parameters 1`] = `
<ul
  className="container"
>
  <li
    className="item"
    key="unitTest.testText"
  >
    <a
      className="link"
      href="https://store.steampowered.com/?sfvFavorite=karin"
      onClick={[Function]}
      title="Buy SFV from Steam"
    >
      <span>
        Buy now!
      </span>
    </a>
  </li>
</ul>
`;

exports[`JobStreet navigation component should render message with child links 1`] = `
<ul
  className="container rightAligned"
>
  <li
    className="item"
    key="unitTest.testText"
  >
    <a
      className="link"
      href="https://store.steampowered.com/?"
      onClick={[Function]}
      title="Buy SFV from Steam"
    >
      <span>
        Buy now!
      </span>
    </a>
  </li>
</ul>
`;

exports[`JobStreet navigation component should render supplied messages 1`] = `
<ul
  className="container"
>
  <li
    className="item"
    key="unitTest.testText"
  >
    <a
      className="link"
      href="https://store.steampowered.com/?"
      onClick={[Function]}
      title="Buy SFV from Steam"
    >
      <span>
        Buy now!
      </span>
    </a>
  </li>
  <li
    className="item"
    key="unitTest.testText1"
  >
    <a
      className="link"
      href="https://store.steampowered.com/?"
      onClick={[Function]}
      title="Buy SFV Arcade from Steam"
    >
      <span>
        Pre-order now!
      </span>
    </a>
  </li>
</ul>
`;

exports[`JobStreet navigation component should render supplied messages on the right 1`] = `
<ul
  className="container rightAligned"
>
  <li
    className="item itemHasDropdown"
    key="unitTest.testText"
  >
    <a
      className="link"
      href="https://store.steampowered.com/?"
      onClick={[Function]}
      title="Buy SFV from Steam"
    >
      <span>
        Buy now!
      </span>
    </a>
    <ul
      className="dropdownList"
    >
      <li
        key="unitTest.testText1"
      >
        <a
          className="dropdownLink"
          href="https://store.steampowered.com/?"
          title="Buy SFV Arcade from Steam"
        >
          <span>
            Pre-order now!
          </span>
        </a>
      </li>
    </ul>
  </li>
</ul>
`;
